#37 fixed mapping for services
