# src/services/catalog/server.js
@@ -1,14 +1,11 @@
 require('dotenv').config()
 
+const protoLoader = require('@grpc/proto-loader')
 const grpc = require('grpc')
 const pino = require('pino')
-const protoLoader = require('@grpc/proto-loader')
 global.Mongoose = require('mongoose')
 
-const proto = getProto('./proto/catalog.proto')
 const productService = require('./services/product')
-
-const server = new grpc.Server()
 
 const logger = pino({
   name: 'catalog-service',
@@ -22,9 +19,9 @@ Mongoose.connection.once('open', function() {
   logger.info(`Connected to ${process.env.MONGO_DB_URL}.`)
 })
 
-let getProto = () => {
+const getProto = (protofile) => {
   const packageDefinition = protoLoader.loadSync(
-    `./proto/catalog.proto`,
+    protofile,
     {
       keepCase: true,
       longs: String,
@@ -37,16 +34,19 @@ let getProto = () => {
   return grpc.loadPackageDefinition(packageDefinition)
 }
 
+const server = new grpc.Server()
+const proto = getProto('./proto/catalog.proto')
+
 server.addService(proto.coolstore.CatalogService.service, {
-  GetProducts(call, callback) {
-    let product = new productService({ price: call.request.highPrice })
+  GetProducts: (call, callback) => {
+    let product = new productService({ price: call.request.high_price })
     product.allProducts(callback)
   },
-  GetProductById(call, callback) {
+  GetProductById: (call, callback) => {
     let product = new productService({ product_id: call.request.product_id })
     product.getProduct(callback)
   },
-  CreateProduct(call, callback) {
+  CreateProduct: (call, callback) => {
     let product = new productService({
       name: call.request.name,
       desc: call.request.desc,
@@ -58,7 +58,6 @@ server.addService(proto.coolstore.CatalogService.service, {
 })
 
 function main() {
-  const server = new grpc.Server()
   server.bind(`0.0.0.0:${process.env.PORT || 5002}`, grpc.ServerCredentials.createInsecure())
   server.start()
   logger.info(`gRPC server running on port ${process.env.PORT}.\n Press CTRL-C to stop.\n`)
