# src/services/open-api/wwwroot/apidocs.json
@@ -20,47 +20,7 @@
     "application/json"
   ],
   "paths": {
-    "/api/availabilities": {
-      "get": {
-        "operationId": "GetInventories",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/coolstoreGetInventoriesResponse"
-            }
-          }
-        },
-        "tags": [
-          "InventoryService"
-        ]
-      }
-    },
-    "/api/availabilities/{id}": {
-      "get": {
-        "operationId": "GetInventory",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/coolstoreGetInventoryResponse"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "tags": [
-          "InventoryService"
-        ]
-      }
-    },
-    "/api/carts": {
+    "/cart/api/carts": {
       "post": {
         "operationId": "InsertItemToNewCart",
         "responses": {
@@ -110,7 +70,7 @@
         ]
       }
     },
-    "/api/carts/{cart_id}": {
+    "/cart/api/carts/{cart_id}": {
       "get": {
         "operationId": "GetCart",
         "responses": {
@@ -134,7 +94,7 @@
         ]
       }
     },
-    "/api/carts/{cart_id}/checkout": {
+    "/cart/api/carts/{cart_id}/checkout": {
       "put": {
         "operationId": "Checkout",
         "responses": {
@@ -158,7 +118,7 @@
         ]
       }
     },
-    "/api/carts/{cart_id}/items/{product_id}": {
+    "/cart/api/carts/{cart_id}/items/{product_id}": {
       "delete": {
         "operationId": "DeleteItem",
         "responses": {
@@ -188,7 +148,129 @@
         ]
       }
     },
-    "/api/inventory/migrate": {
+    "/catalog/api/product": {
+      "post": {
+        "operationId": "CreateProduct",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/coolstoreCreateProductResponse"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/coolstoreCreateProductRequest"
+            }
+          }
+        ],
+        "tags": [
+          "CatalogService"
+        ]
+      }
+    },
+    "/catalog/api/product/{product_id}": {
+      "get": {
+        "operationId": "GetProductById",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/coolstoreGetProductByIdResponse"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "product_id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "CatalogService"
+        ]
+      }
+    },
+    "/catalog/api/products": {
+      "get": {
+        "operationId": "GetProducts",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/coolstoreGetProductsResponse"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "current_page",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "high_price",
+            "in": "query",
+            "required": false,
+            "type": "number",
+            "format": "double"
+          }
+        ],
+        "tags": [
+          "CatalogService"
+        ]
+      }
+    },
+    "/inventory/api/availabilities": {
+      "get": {
+        "operationId": "GetInventories",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/coolstoreGetInventoriesResponse"
+            }
+          }
+        },
+        "tags": [
+          "InventoryService"
+        ]
+      }
+    },
+    "/inventory/api/availabilities/{id}": {
+      "get": {
+        "operationId": "GetInventory",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/coolstoreGetInventoryResponse"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "InventoryService"
+        ]
+      }
+    },
+    "/inventory/api/inventory/migrate": {
       "post": {
         "operationId": "DbMigration",
         "responses": {
@@ -214,7 +296,95 @@
         ]
       }
     },
-    "/api/reviews": {
+    "/rating/api/ratings": {
+      "get": {
+        "operationId": "GetRatings",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/coolstoreGetRatingsResponse"
+            }
+          }
+        },
+        "tags": [
+          "RatingService"
+        ]
+      },
+      "post": {
+        "operationId": "CreateRating",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/coolstoreCreateRatingResponse"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/coolstoreCreateRatingRequest"
+            }
+          }
+        ],
+        "tags": [
+          "RatingService"
+        ]
+      },
+      "put": {
+        "operationId": "UpdateRating",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/coolstoreUpdateRatingResponse"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/coolstoreUpdateRatingRequest"
+            }
+          }
+        ],
+        "tags": [
+          "RatingService"
+        ]
+      }
+    },
+    "/rating/api/ratings/{product_id}": {
+      "get": {
+        "operationId": "GetRatingByProductId",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/coolstoreGetRatingByProductIdResponse"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "product_id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "RatingService"
+        ]
+      }
+    },
+    "/review/api/reviews": {
       "post": {
         "operationId": "CreateReview",
         "responses": {
@@ -240,7 +410,7 @@
         ]
       }
     },
-    "/api/reviews/{product_id}": {
+    "/review/api/reviews/{product_id}": {
       "get": {
         "operationId": "GetReviews",
         "responses": {
@@ -264,7 +434,7 @@
         ]
       }
     },
-    "/api/reviews/{review_id}": {
+    "/review/api/reviews/{review_id}": {
       "delete": {
         "operationId": "DeleteReview",
         "responses": {
@@ -288,7 +458,7 @@
         ]
       }
     },
-    "/api/reviews/{review_id}/{content}": {
+    "/review/api/reviews/{review_id}/{content}": {
       "put": {
         "operationId": "EditReview",
         "responses": {
@@ -318,7 +488,7 @@
         ]
       }
     },
-    "/ping": {
+    "/review/ping": {
       "get": {
         "operationId": "Ping",
         "responses": {
@@ -397,12 +567,82 @@
         }
       }
     },
+    "coolstoreCatalogProductDto": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string"
+        },
+        "name": {
+          "type": "string"
+        },
+        "desc": {
+          "type": "string"
+        },
+        "price": {
+          "type": "number",
+          "format": "double"
+        },
+        "image_url": {
+          "type": "string"
+        }
+      }
+    },
     "coolstoreCheckoutResponse": {
       "type": "object",
       "properties": {
         "is_succeed": {
           "type": "boolean",
           "format": "boolean"
+        }
+      }
+    },
+    "coolstoreCreateProductRequest": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string"
+        },
+        "desc": {
+          "type": "string"
+        },
+        "price": {
+          "type": "number",
+          "format": "double"
+        },
+        "image_url": {
+          "type": "string"
+        }
+      }
+    },
+    "coolstoreCreateProductResponse": {
+      "type": "object",
+      "properties": {
+        "product": {
+          "$ref": "#/definitions/coolstoreCatalogProductDto"
+        }
+      }
+    },
+    "coolstoreCreateRatingRequest": {
+      "type": "object",
+      "properties": {
+        "product_id": {
+          "type": "string"
+        },
+        "user_id": {
+          "type": "string"
+        },
+        "cost": {
+          "type": "number",
+          "format": "double"
+        }
+      }
+    },
+    "coolstoreCreateRatingResponse": {
+      "type": "object",
+      "properties": {
+        "rating": {
+          "$ref": "#/definitions/coolstoreRatingDto"
         }
       }
     },
@@ -488,6 +728,44 @@
         }
       }
     },
+    "coolstoreGetProductByIdResponse": {
+      "type": "object",
+      "properties": {
+        "product": {
+          "$ref": "#/definitions/coolstoreCatalogProductDto"
+        }
+      }
+    },
+    "coolstoreGetProductsResponse": {
+      "type": "object",
+      "properties": {
+        "products": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/coolstoreCatalogProductDto"
+          }
+        }
+      }
+    },
+    "coolstoreGetRatingByProductIdResponse": {
+      "type": "object",
+      "properties": {
+        "rating": {
+          "$ref": "#/definitions/coolstoreRatingDto"
+        }
+      }
+    },
+    "coolstoreGetRatingsResponse": {
+      "type": "object",
+      "properties": {
+        "ratings": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/coolstoreRatingDto"
+          }
+        }
+      }
+    },
     "coolstoreGetReviewsResponse": {
       "type": "object",
       "properties": {
@@ -545,6 +823,24 @@
         }
       }
     },
+    "coolstoreRatingDto": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string"
+        },
+        "product_id": {
+          "type": "string"
+        },
+        "user_id": {
+          "type": "string"
+        },
+        "cost": {
+          "type": "number",
+          "format": "double"
+        }
+      }
+    },
     "coolstoreReviewDto": {
       "type": "object",
       "properties": {
@@ -588,6 +884,29 @@
       "properties": {
         "result": {
           "$ref": "#/definitions/coolstoreCartDto"
+        }
+      }
+    },
+    "coolstoreUpdateRatingRequest": {
+      "type": "object",
+      "properties": {
+        "product_id": {
+          "type": "string"
+        },
+        "user_id": {
+          "type": "string"
+        },
+        "cost": {
+          "type": "number",
+          "format": "double"
+        }
+      }
+    },
+    "coolstoreUpdateRatingResponse": {
+      "type": "object",
+      "properties": {
+        "rating": {
+          "$ref": "#/definitions/coolstoreRatingDto"
         }
       }
     }
